# fastapi-demo-beyond-crud

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 367371ad1406_add_reviews_table_and_its_relationships.py  63649f3affb9_add_tags_table_and_its_relationships.py  780b6d86c2d3_non_nullable_first_last_name_in_users_.py  7aea0a31a0a3_init.py  89fd52dc68c6_relate_users_to_products.py  949d5c704d57_nullable_first_last_name_in_users_table.py  9c650dedbab2_add_roles_to_users.py  ad73f31142b2_relate_users_to_products_correction.py  ec1b214ecd29_add_backpopulate_relationships.py
practice/: sqlmodel.ipynb
src/: __init__.py  config.py  errors.py  middleware.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/db/: main.py  models.py  redis.py
src/products/: routes.py  schemas.py  service.py
src/reviews/: routes.py  service.py
src/tags/: routes.py  service.py
