[tool.poetry]
name = "pos-app"
version = "0.1.0"
description = ""
authors = ["kamran945 <kamran945@gmail.com>"]
readme = "README.md"
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
pydantic = "^2.10.4"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
aioredis = "^2.0.1"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
